# Server

./: .gitignore  CMakeLists.txt  ReadMe.md  cautious.txt  create_cmake.sh  readme.txt  数据库文件路径.txt  用前必读.url
audioserver/: CMakeLists.txt  config.cpp  config.h  main.cpp  pch.h  process.cpp  ptcregister.cpp
audioserver/audio/: audioMgr.cpp  audioMgr.h
audioserver/network/: centerlink.cpp  centerlink.h  gatelink.cpp  gatelink.h
audioserver/protocol/: sendonly.cpp
controlserver/: CMakeLists.txt  config.cpp  config.h  main.cpp  pch.h  process.cpp  ptcregister.cpp
controlserver/account/: accountkick.cpp  accountkick.h  accountsession.cpp  accountsession.h  accountsessionmgr.cpp  accountsessionmgr.h  logincontrol.cpp  logincontrol.h  logoutlistener.h  whitelistmgr.cpp  whitelistmgr.h
controlserver/network/: dblink.cpp  gatelink.cpp  gatelink.h  gmtoollink.h  gslink.cpp  gslink.h  loginlink.cpp  loginlink.h  mslink.cpp  mslink.h  rslink.cpp  rslink.h
controlserver/profile/: ctrlprofiler.cpp  ctrlprofiler.h
controlserver/protocol/: sendonly.cpp
controlserver/queuing/: queuingmgr.cpp  queuingmgr.h
controlserver/role/: role.cpp  role.h  roleidgenerator.cpp  roleidgenerator.h  rolemanager.cpp  rolemanager.h
controlserver/scene/: gsmanager.cpp  gsmanager.h  scene.cpp  scene.h  sceneconfig.cpp  sceneconfig.h  scenecreate.cpp  scenecreate.h  scenemanager.cpp  scenemanager.h  sceneswitch.cpp  sceneswitch.h
controlserver/shm/: shmmgr.cpp  shmmgr.h
dbserver/: CMakeLists.txt  config.cpp  config.h  dbprocess.cpp  dbprocess.h  debugflag.cpp  debugflag.h  main.cpp  pch.h  ptcregister.cpp
dbserver/db/: mysqlmgr.cpp  mysqlmgr.h  mysqlthread.cpp  mysqlthread.h
dbserver/network/: controllink.cpp  controllink.h  gslink.cpp  gslink.h  mslink.cpp  mslink.h  rslink.cpp
dbserver/profile/: dbprofiler.cpp
dbserver/protocol/: sendonly.cpp
gameserver/: CMakeLists.txt  config.cpp  config.h  foreach.h  main.cpp  minidump.h  pch.h  process.cpp  process.h  ptcregister.cpp
gameserver/ai/: aibehaviortree.cpp  aibehaviortree.h  aiconfig.cpp  aiconfig.h  ainode.cpp  ainode.h  ainodeaction.cpp  ainodeaction.h  ainodecondition.cpp  ainodecondition.h  ainodefactory.cpp  ainodefactory.h  ainodelogic.cpp  ainodelogic.h  ainodemove.cpp  ainodemove.h  ainodeskill.cpp  ainodeskill.h  ainodetarget.cpp  ainodetarget.h  aionlinedebugmgr.cpp  aionlinedebugmgr.h  aiscenehandler.cpp  aiscenehandler.h  aitreemgr.cpp  aitreemgr.h  sysnode.cpp  sysnode.h
gameserver/anticheat/: anticheat.cpp  anticheat.h
gameserver/apollovoice/: ApolloVoiceMgr.cpp  ApolloVoiceMgr.h
gameserver/auction/: auctionrequest.cpp  auctionrequest.h  guildauctrequest.cpp  guildauctrequest.h
gameserver/broadcast/: broadcast.cpp  broadcast.h
gameserver/buff/: XBuff.cpp  XBuff.h  XBuffAuraCheck.cpp  XBuffAuraCheck.h  XBuffChangeAttribute.cpp  XBuffChangeAttribute.h  XBuffChangeFightGroup.cpp  XBuffChangeFightGroup.h  XBuffClear.cpp  XBuffClear.h  XBuffDamageDistanceScale.cpp  XBuffDamageDistanceScale.h  XBuffDamageReflection.cpp  XBuffDamageReflection.h  XBuffEnum.h  XBuffKill.cpp  XBuffKill.h  XBuffLifeAddAttack.cpp  XBuffLifeAddAttack.h  XBuffLifeSteal.cpp  XBuffLifeSteal.h  XBuffManipulate.cpp  XBuffManipulate.h  XBuffMob.cpp  XBuffMob.h  XBuffReduceDamage.cpp  XBuffReduceDamage.h  XBuffReduceSkillCD.cpp  XBuffReduceSkillCD.h  XBuffRegenerate.cpp  XBuffRegenerate.h  XBuffSkillsReplace.cpp  XBuffSkillsReplace.h  XBuffSpecialState.cpp  XBuffSpecialState.h  XBuffTargetLifeAddAttack.cpp  XBuffTargetLifeAddAttack.h  XBuffTemplateManager.cpp  XBuffTemplateManager.h  XBuffTraveller.cpp  (+29 more)
gameserver/camp/: camprecord.cpp  camprecord.h
gameserver/component/: XAIComponent.cpp  XAIComponent.h  XActionReceiver.cpp  XActionReceiver.h  XActionSender.cpp  XActionSender.h  XActionStateComponent.hpp  XBeHitComponent.cpp  XBeHitComponent.h  XBuffComponent.cpp  XBuffComponent.h  XChargeComponent.cpp  XChargeComponent.h  XComponent.cpp  XComponent.h  XComponentDefine.hpp  XDeathComponent.cpp  XDeathComponent.h  XFlyComponent.cpp  XFlyComponent.h  XFreezeComponent.cpp  XFreezeComponent.h  XGravityComponent.cpp  XGravityComponent.h  XIdleComponent.cpp  XIdleComponent.h  XManipulationComponent.cpp  XManipulationComponent.h  XMoveComponent.cpp  XMoveComponent.h  XNavigationComponent.cpp  XNavigationComponent.h  XNetComponent.cpp  XNetComponent.h  XPresentComponent.cpp  XPresentComponent.h  XQuickTimeEventComponent.cpp  XQuickTimeEventComponent.h  XRotationComponent.cpp  XRotationComponent.h  (+6 more)
gameserver/db/: mysqlmgr.cpp
gameserver/dragonguild/: dragonguild.cpp  dragonguild.h  dragonguildmgr.cpp  dragonguildmgr.h  dragonguildrecord.cpp  dragonguildrecord.h
gameserver/entity/: XActionDefine.cpp  XActionDefine.h  XDummyRole.cpp  XDummyRole.h  XEnemy.cpp  XEnemy.h  XEntity.cpp  XEntity.h  XGlobalAIObject.cpp  XGlobalAIObject.h  XObject.cpp  XObject.h  XRole.cpp  XRole.h
gameserver/event/: eventmgr.cpp  eventmgr.h
gameserver/findback/: findbackconfig.cpp  findbackconfig.h  findbackrecord.cpp  findbackrecord.h  itemfindback.cpp  itemfindback.h  itemfindbackbase.cpp  itemfindbackbase.h  miscfindback.cpp  miscfindback.h  nestfindback.cpp  nestfindback.h  totalsinglefindback.cpp  totalsinglefindback.h  towerfindback.cpp  towerfindback.h
gameserver/forbid/: forbidwordmgr.cpp  forbidwordmgr.h
gameserver/gamelogic/: AchivementActivityManager.cpp  AchivementActivityManager.h  AchivementDef.h  AchivementHandler.cpp  AchivementHandler.h  AchivementMgr.cpp  AchivementMgr.h  FatigueMgr.cpp  FatigueMgr.h  LeagueMatchParamMgr.cpp  LeagueMatchParamMgr.h  LotteryMgr.cpp  LotteryMgr.h  MultActivityMgr.cpp  MultActivityMgr.h  PersonalCareerQuest.cpp  QAMgr.cpp  QAMgr.h  (+391 more)
gateserver/: CMakeLists.txt  config.cpp  config.h  pch.h  process.cpp  ptcregister.cpp
masterserver/: CMakeLists.txt  config.cpp  config.h  main.cpp  pch.h  process.cpp  process.h  ptcregister.cpp
template/: CMakeLists.txt  config.cpp  config.h  main.cpp  pch.h  process.cpp  ptcregister.cpp
versionserver/: CMakeLists.txt  config.cpp  config.h  main.cpp  process.cpp  ptcregister.cpp
(+16797 files in other folders)
